# drf_exam

./: .gitignore  README.md  pyproject.toml
apps/accounts/: managers.py  models.py  views.py
apps/accounts/migrations/: 0001_initial.py
apps/common/: models.py  utils.py
apps/profiles/: models.py  serializers.py  urls.py  views.py
apps/profiles/migrations/: 0001_initial.py
apps/reviews/: models.py  schema_examples.py  serializers.py  urls.py  views.py
apps/reviews/migrations/: 0001_initial.py
apps/sellers/: models.py  urls.py  views.py
apps/sellers/migrations/: 0001_initial.py
apps/shop/: models.py  schema_examples.py  serializers.py  urls.py  views.py
apps/shop/migrations/: 0001_initial.py
core/: settings.py  urls.py
